--- a/ios/HandyHireApp/Info.plist
+++ b/ios/HandyHireApp/Info.plist
@@ -36,6 +36,13 @@
 	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need access to your photo library to select videos.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>We need access to your camera to record videos.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We need access to your microphone for video recording.</string>
+
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>arm64</string>
