--- a/package.json
+++ b/package.json
@@ -36,15 +36,19 @@
     "react-is": "^19.1.0",
     "react-native": "0.80.0",
     "react-native-animatable": "^1.4.0",
+    "react-native-compressor": "^1.12.0",
+    "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.26.0",
     "react-native-image-crop-picker": "^0.50.1",
     "react-native-image-picker": "^8.2.0",
     "react-native-image-viewing": "^0.2.2",
+    "react-native-insta-story": "^1.1.9",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.4.2",
     "react-native-permissions": "^5.4.1",
     "react-native-picker-select": "^9.3.1",
+    "react-native-progress": "^5.0.1",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.3.0",
@@ -55,6 +59,7 @@
     "react-native-svg-transformer": "^1.5.1",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video-trim": "^5.0.2",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "swr": "^2.3.3",
