--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native-svg-transformer": "^1.5.1",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.16.0",
     "react-native-video-trim": "^5.0.2",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
