--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "tw:init": "tailwindcss init"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.8",
     "@rails/actioncable": "^8.0.200",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-firebase/app": "^22.4.0",
+    "@react-native-firebase/messaging": "^22.4.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-picker/picker": "^2.11.0",
     "@react-native/new-app-screen": "0.80.0",
